fix: padding removed from transfer button on mobile view

--- a/src/components/BridgeBtn/BridgeBtn.module.scss
+++ b/src/components/BridgeBtn/BridgeBtn.module.scss
@@ -38,7 +38,7 @@
 }
 
 .bridgeButton {
-    padding: 0;
+    padding: 0 !important;
     min-height: 40px;
     min-width: 178px;
 }
